fix gap in headers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,9 @@ html, body {
   font-family: 'Montserrat', sans-serif;
 }
 
+#header {
+  top: 38px !important;
+}
 body {
   background-color: #FFF;
 }
